--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Loading screen -->
         <div id="loading-screen">
             <div class="loader">
-                <h2>Loading Portfolio...t</h2>
+                <h2>Loading Portfolio...</h2>
                 <div class="loading-bar"></div>
             </div>
         </div>
